Fix paths for backend test file checks and coverage reporting in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Check if Backend Test Files Exist
         id: check_backend_tests
         run: |
-          if [ -z "$(find content-gen/tests -type f -name 'test_*.py' 2>/dev/null)" ]; then
+          if [ -z "$(find content-gen/src/tests -type f -name 'test_*.py' 2>/dev/null)" ]; then
             echo "No backend test files found, skipping backend tests."
             echo "skip_backend_tests=true" >> $GITHUB_ENV
           else
@@ -61,7 +61,7 @@ jobs:
       - name: Run Backend Tests with Coverage
         if: env.skip_backend_tests == 'false'
         run: |
-          pytest --cov=. --cov-report=term-missing --cov-report=xml ./content-gen/tests
+          pytest --cov=. --cov-report=term-missing --cov-report=xml ./content-gen/src/tests
 
       - name: Skip Backend Tests
         if: env.skip_backend_tests == 'true'
