--- a/.github/workflows/stale-bot.yml
+++ b/.github/workflows/stale-bot.yml
@@ -3,6 +3,8 @@ on:
   schedule:
     - cron: '30 1 * * *'  # Runs daily at 1:30 AM UTC
   workflow_dispatch:  # Allows manual triggering
+  pull_request:
+    branches: [ "main" ]
 permissions:
   contents: write
   issues: write
