--- a/.github/workflows/job-docker-build.yml
+++ b/.github/workflows/job-docker-build.yml
@@ -57,24 +57,38 @@ jobs:
           username: ${{ secrets.ACR_TEST_USERNAME }}
           password: ${{ secrets.ACR_TEST_PASSWORD }}
 
-      - name: Build and Push Docker Image
-        id: build_push_image
+      - name: Build and Push Backend API Docker Image
+        id: build_push_backend
         uses: docker/build-push-action@v6
         env:
           DOCKER_BUILD_SUMMARY: false
         with:
-          context: ./src
-          file: ./src/WebApp.Dockerfile
+          context: ./content-gen/src/backend
+          file: ./content-gen/src/backend/ApiApp.Dockerfile
           push: true
           tags: |
-            ${{ secrets.ACR_TEST_LOGIN_SERVER }}/webapp:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}
-            ${{ secrets.ACR_TEST_LOGIN_SERVER }}/webapp:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}_${{ github.run_number }}
+            ${{ secrets.ACR_TEST_LOGIN_SERVER }}/content-gen-api:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}
+            ${{ secrets.ACR_TEST_LOGIN_SERVER }}/content-gen-api:latest
 
-      - name: Verify Docker Image Build
+      - name: Build and Push Frontend App Docker Image
+        id: build_push_frontend
+        uses: docker/build-push-action@v6
+        env:
+          DOCKER_BUILD_SUMMARY: false
+        with:
+          context: ./content-gen/src/app
+          file: ./content-gen/src/app/WebApp.Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.ACR_TEST_LOGIN_SERVER }}/content-gen-app:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}
+            ${{ secrets.ACR_TEST_LOGIN_SERVER }}/content-gen-app:latest
+
+      - name: Verify Docker Images Build
         shell: bash
         run: |
-          echo "✅ Docker image successfully built and pushed"
-          echo "Image tag: ${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}"
+          echo "✅ Docker images successfully built and pushed"
+          echo "Backend API image tag: ${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}"
+          echo "Frontend App image tag: ${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}"
       
       - name: Generate Docker Build Summary
         if: always()
@@ -91,10 +105,15 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           if [[ "${{ job.status }}" == "success" ]]; then
             echo "### ✅ Build Details" >> $GITHUB_STEP_SUMMARY
-            echo "Successfully built and pushed one Docker image to ACR:" >> $GITHUB_STEP_SUMMARY
+            echo "Successfully built and pushed two Docker images to ACR:" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "**Built Images:**" >> $GITHUB_STEP_SUMMARY
-            echo "- \`${ACR_NAME}.azurecr.io/webapp:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}\`" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${ACR_NAME}.azurecr.io/content-gen-api:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}\`" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${ACR_NAME}.azurecr.io/content-gen-app:${{ steps.generate_docker_tag.outputs.IMAGE_TAG }}\`" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Also tagged as:**" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${ACR_NAME}.azurecr.io/content-gen-api:latest\`" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${ACR_NAME}.azurecr.io/content-gen-app:latest\`" >> $GITHUB_STEP_SUMMARY
           else
             echo "### ❌ Build Failed" >> $GITHUB_STEP_SUMMARY
             echo "- Docker build process encountered an error" >> $GITHUB_STEP_SUMMARY
